--- a/index.html
+++ b/index.html
@@ -12,6 +12,37 @@
 
 </head> 
 <body>
+    <!-- cabeçalho -->
+<header>
     
+</header>
+<!-- Destaque -->
+<main>
+<h1>HTML5 e CSS3</h1>
+<h2>Você faz. Você aprende</h2>
+</main>
+<!-- Sobre -->
+<section>
+<h2>Aprender na prática</h2>
+</section>
+<!-- One page -->
+<section>
+<h2>One page site</h2>
+</section>
+<!-- Wireframe -->
+<section>
+<h2>Wireframe</h2>
+</section>
+<!-- Conteudo -->
+<section>
+<h2>Conteudo</h2>
+<h3>HTML5</h3>
+<h3>BOX MODEL CSS</h3>
+<h3>BREAKPOINTS</h3>
+</section>
+<!-- Rodapé -->
+<footer>
+
+</footer>
 </body>
 </html>
