--- a/index.html
+++ b/index.html
@@ -1,48 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 e CSS3 - One page site</title>
-    <meta name="description" content="Aprenda HTML5,CSS3 e SEO de forma simples, prática e objetiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo.">
+    <meta name="description"
+        content="Aprenda HTML5,CSS3 e SEO de forma simples, prática e objetiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo.">
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="style.css">
 
 
-</head> 
+</head>
+
 <body>
     <!-- cabeçalho -->
-<header>
-    
-</header>
-<!-- Destaque -->
-<main>
-<h1>HTML5 e CSS3</h1>
-<h2>Você faz. Você aprende</h2>
-</main>
-<!-- Sobre -->
-<section>
-<h2>Aprender na prática</h2>
-</section>
-<!-- One page -->
-<section>
-<h2>One page site</h2>
-</section>
-<!-- Wireframe -->
-<section>
-<h2>Wireframe</h2>
-</section>
-<!-- Conteudo -->
-<section>
-<h2>Conteudo</h2>
-<h3>HTML5</h3>
-<h3>BOX MODEL CSS</h3>
-<h3>BREAKPOINTS</h3>
-</section>
-<!-- Rodapé -->
-<footer>
+    <header>
+        <div class="Container">
+        </div>
+    </header>
+    <!-- Destaque -->
+    <main>
+        <div class="Container">
+            <h1>HTML5 e CSS3</h1>
+            <h2>Você faz. Você aprende</h2>
+        </div>
+    </main>
+    <!-- Sobre -->
+    <section>
+        <div class="Container">
+            <h2>Aprender na prática</h2>
+        </div>
+    </section>
+    <!-- One page -->
+    <section>
+        <div class="Container">
+            <h2>One page site</h2>
+        </div>
+    </section>
+    <!-- Wireframe -->
+    <section>
+        <div class="Container">
+            <h2>Wireframe</h2>
+        </div>
+    </section>
+    <!-- Conteudo -->
+    <section>
+        <div class="Container">
+            <h2>Conteudo</h2>
+            <h3>HTML5</h3>
+            <h3>BOX MODEL CSS</h3>
+            <h3>BREAKPOINTS</h3>
+        </div>
+    </section>
+    <!-- Rodapé -->
+    <footer>
+        <div class="Container">
 
-</footer>
+        </div>
+    </footer>
 </body>
+
 </html>
